# stopple

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  manage.py  pyproject.toml  skyspell-ignore.toml
migrations/: 0001_initial.down.sql  0001_initial.up.sql  20251226171649_initial.sql  20251226214204_vulnerabilities.sql  20251227100029_cache.sql
src/: cli.rs  database.rs  dependencies.rs  finder.rs  lib.rs  main.rs  nvd.rs  project.rs  tests.rs  vulnerabilities.rs
src/database/: tests.rs
src/finder/: tests.rs
src/nvd/: client.rs  response.rs  tests.rs
src/nvd/tests/: cve.json
src/project/: tests.rs
src/tests/: cve_template.json  requirements.txt
stopple/: finder.py  indexer.py  repository.py  scanner.py  vulnerabilities.py
stopple/nvd/: api.py  client.py  syncer.py
stopple_app/: apps.py  models.py  repository.py  urls.py  views.py
stopple_app/management/commands/: index_cves.py  sync_cves.py
stopple_app/migrations/: 0001_initial.py  0002_syncer.py  0003_vulnerability.py  0004_alter_vulnerability_severity.py  0005_remove_vulnerability_severity_cve_severity.py
stopple_app/static/stopple/: style.css
stopple_app/templates/stopple/: base.html  cve_details.html  index.html  menu.html  search.html  vulnerabilities.html  vulnerabilities_table.html
stopple_app/templates/stopple/nav/: link.html
stopple_app/templates/stopple/pages/: database.html  diagnostic.html  diagnostics.html
stopple_app/templates/stopple/pages/diagnostics/: form.html  results.html
stopple_web/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  settings.py  test_finder.py  test_indexer.py  test_scanner.py  test_syncer.py
tests/django/: test_repository.py
tests/nvd/: conftest.py  cve_sendmail.json  cve_template.json  test_client.py  test_fake_client.py
