[package]
name = "stopple"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
versions = "7.0.0"
