[project]
name = "stopple"
version = "0.1.0"
description = ""
authors = [{ name = "Dimitri Merejkowsky", email = "dimitri@dmerej.info" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["ipython (>=9.8.0,<10.0.0)", "ipdb (>=0.13.13,<0.14.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
