[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "stopple"
version = "0.1.0"
description = "Find and fix security vulnerabilities"
authors = [{ name = "Dimitri Merejkowsky", email = "dimitri@dmerej.info" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["django (>=6.0,<7.0)", "pydantic (>=2.12.5,<3.0.0)"]

[tool.django-stubs]
django_settings_module = "stopple_web.settings"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
ipython = "^9.8.0"
ipdb = "^0.13.13"
mypy = "^1.19.1"
django-stubs = "^5.2.8"


[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]
