[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "stopple"
version = "0.1.0"
description = "Find and fix security vulnerabilities"
authors = [{ name = "Dimitri Merejkowsky", email = "dimitri@dmerej.info" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]

[tool.django-stubs]
django_settings_module = "stopple_web.settings"


[tool.poetry.group.dev.dependencies]
django-stubs = "^5.2.8"
ipdb = "^0.13.13"
ipython = "^9.8.0"
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-django = "^4.11.1"
ruff = "^0.14.10"

[tool.pytest]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]
packages = ["stopple", "stopple_app", "stopple_web", "tests"]
